agregue nuevo p en footer

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                     <p>Teléfono:</p> 
                     <p>299-11111111</p>
                     <p>299-22222222</p>
+                    <p>Gracias por visitarnos!</p>
                 </div>
                 <div>
                     <ul class="redes">
